# MOAI-FHE-TransformerInference-Public

./: .gitignore  CMakeLists.txt  README.md  test.cpp
data/: first_layernorm_output.txt  selfoutput_linear.txt
data/att_block_weights/: embedded_inputs.txt  key_bias_head1.txt  key_weight_head1.txt  query_bias.txt  query_bias_head1.txt  query_weight_head1.txt  real_attention.txt  value_bias.txt  value_bias_head1.txt  value_weight_head1.txt
data/feed_forward_weights/: final_output_LayerNorm_weight.txt
data/layer_0/Output/allresults/: final_output_after_linear.csv  final_output_inputs.csv  final_output_residual_connection_before_layernorm.csv  final_output_usedby_residual.csv
data/layer_0/Output/parms/: final_output_LayerNorm_bias.csv  final_output_dense_bias.csv
data/layer_1/Output/allresults/: final_output_after_linear.csv  final_output_inputs.csv  final_output_residual_connection_before_layernorm.csv  final_output_usedby_residual.csv  real_final_output.csv
data/layer_1/Output/parms/: final_output_LayerNorm_bias.csv  final_output_LayerNorm_weight.csv  final_output_dense_bias.csv
data/layer_10/Output/allresults/: final_output_after_linear.csv  final_output_inputs.csv  final_output_residual_connection_before_layernorm.csv  final_output_usedby_residual.csv
data/self_output_weights/: self_output_LayerNorm_bias.txt  self_output_dense_bias.txt
include/: include.hpp
include/source/att_block/: single_att_block.hpp
include/source/bootstrapping/: Bootstrapper.cpp
include/source/matrix_mul/: Batch_encode_encrypt.hpp  Ct_ct_matrix_mul.hpp  Ct_pt_matrix_mul.hpp
include/source/non_linear_func/: gelu.hpp  gelu_others.hpp  layernorm.hpp  softmax.hpp
include/test/: test_SEAL_ckks.hpp  test_full_scheme.hpp  test_single_layer.hpp
include/test/att_block/: test_12_att_block.hpp
include/test/bootstrapping/: test_layernorm_bootstrapping.hpp
include/test/matrix_mul/: test_batch_encode_encrypt.hpp  test_ct_ct_matrix_mul.hpp  test_ct_pt_matrix_mul.hpp
(+264 files in other folders)
